--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main h2 {
 }
 
 /* Add Student Styles Below */
+
 .jane-style {
     color: hotpink;
     background-color: black;
@@ -39,4 +40,10 @@ main h2 {
 
 .codys-styles {
     background:rgb(92, 149, 235);
+}
+
+.Nathaly-style {
+    color: rgb(108, 105, 255);
+    background-color: rgb(168, 94, 34);
+    padding: 3px;
 }
